# tg-bot

./: .env.example  .gitignore  AGENTS.md  agent_loop.py  bot.py  e2b_sandbox.py  models.py  prompts.py  pyproject.toml  rotation.py  session.py  test_agent_loop.py  test_bot.py
adapters/: __init__.py  anthropic.py  base.py  gemini.py  gpt.py
