[project]
name = "tg-bot"
version = "0.1.0"
description = "Telegram bot with LLM agent loop"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot[socks]",
    "python-dotenv",
    "litellm",
    "httpx[socks]",
    "aiohttp-socks",
    "google-auth",
    "google-auth-oauthlib",
    "google-api-python-client",
    "socksio>=1.0.0",
    "httpx-socks>=0.11.0",
    "pysocks>=1.7.1",
]

[project.scripts]
tg-bot = "bot:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
